		and zoom.
		Fix for progress bar on splash screen in Wayland.
		Add filtering to zoom and drag to prevent floods of events
		before the next draw.
		Added fflush on stdout for help text as fix for possible
                stdout problem with mingw/msys shells.
		Added warning that "Touch DnD not yet supported on Wayland"
		when it is attempted on Wayland touchscreens.  (X11 is ok.)
                Added preliminary support for Time datatype.
		MinGW compile fix on X11 Window usage.
		Added gesture_filter_cnt to fix spurious mouse events on X11
		touch.
		Warnings fixes for Verilator integration.
		Fixed install_proc_filter usage for Tcl invocation.
                Change integer type to "integer" in SST	to differentiate it
                from sv	ints.
		Premiminary support for	enum tables embedded in	FST files.
3.3.96  16nov18 Changed to standardized zoom in/out/full hotkeys.
		Changed swipe to use realtime clock for better positioning
		when frame rate is variable due to differing rendering
		speed along the trace.
		Added time backtracking	warning	(for partial mode) to lxt2vcd.
		VCD time backtracking fix (not for interactive mode).
		Added experimental header bar support for GTK3.
		Added show/hide toolbar buttons to header bar.
		Added drag_failed handling (can press ESC) to DnD operations.
		Move reload failure message to header bar for GTK3.
		Prevent missing file in savefile from causing savefile to be
		read as VCD by mistake.
		Changed to Dinotrace-like 0s/1s rendering for bit vectors so
		values can be discerned without seeing the full value text.
		Removed unneeded pango_layout_get_extents() inside call for
		font_engine_draw_string().
		Changed bsearch_trunc() to run in constant time when monospace
		fonts are in use.
		Added missing GDK_SCROLL_MASK to signal area (need for gtk3).
		Added default "maybe" option for use_gestures rc variable such
		that it converts to yes if a touchscreen is detected.