@@ -7361,6 +7361,48 @@ if(GLOBALS->helpbox_is_active)
 }
 
 /**/
+void menu_fullscreen(gpointer null_data, guint callback_action, GtkWidget *widget)
+{
+(void)null_data;
+(void)callback_action;
+(void)widget;
+
+if(GLOBALS->helpbox_is_active)
+        {
+        help_text_bold("\n\nFullscreen");
+        help_text(
+		" toggles the fullscreen status of the main window."
+        );
+        }
+	else
+	{
+	GLOBALS->fullscreen = gtk_check_menu_item_get_active(GTK_CHECK_MENU_ITEM(menu_wlist[WV_MENU_FULLSCR]));
+	if(GLOBALS->fullscreen)
+		{
+		gtk_window_fullscreen (GTK_WINDOW(GLOBALS->mainwindow));
+#ifdef WAVE_ALLOW_GTK3_HEADER_BAR
+		gtk_widget_show(GLOBALS->time_mainbox);
+#endif
+		}
+		else
+		{
+#ifdef WAVE_ALLOW_GTK3_HEADER_BAR
+		gtk_widget_hide(GLOBALS->time_mainbox);
+#endif
+		gtk_window_unfullscreen (GTK_WINDOW(GLOBALS->mainwindow));
+		}
+
+	if(GLOBALS->wave_hslider)
+		{
+		g_signal_emit_by_name (XXX_GTK_OBJECT (GTK_ADJUSTMENT(GLOBALS->wave_hslider)),"changed");
+		g_signal_emit_by_name (XXX_GTK_OBJECT (GTK_ADJUSTMENT(GLOBALS->wave_hslider)),"value_changed");
+		}
+	DEBUG(printf("Fullscreen\n"));
+	}
+
+}
+
+/**/
 void menu_show_grid(gpointer null_data, guint callback_action, GtkWidget *widget)
 {
 (void)null_data;
@@ -7742,6 +7784,8 @@ static gtkwave_mlist_t menu_items[] =
     WAVE_GTKIFE("/Markers/Locking/Lock to Greater Named Marker", "W", lock_marker_right, WV_MENU_MLKRT, "<Item>"),
     WAVE_GTKIFE("/Markers/Locking/Unlock from Named Marker", "O", unlock_marker, WV_MENU_MLKOFF, "<Item>"),
 
+    WAVE_GTKIFE("/View/Fullscreen", "F11", menu_fullscreen, WV_MENU_FULLSCR, "<ToggleItem>"),
+    WAVE_GTKIFE("/View/<separator>", NULL, NULL, WV_MENU_SEP8C, "<Separator>"),
     WAVE_GTKIFE("/View/Show Grid", "<Alt>G", menu_show_grid, WV_MENU_VSG, "<ToggleItem>"),
     WAVE_GTKIFE("/View/<separator>", NULL, NULL, WV_MENU_SEP9, "<Separator>"),
     WAVE_GTKIFE("/View/Show Wave Highlight", NULL, menu_show_wave_highlight, WV_MENU_SHW, "<ToggleItem>"),
@@ -7762,7 +7806,7 @@ static gtkwave_mlist_t menu_items[] =
     WAVE_GTKIFE("/View/Toggle Delta-Frequency", NULL, menu_toggle_delta_or_frequency, WV_MENU_VTDF, "<Item>"),
     WAVE_GTKIFE("/View/Toggle Max-Marker", "F10", menu_toggle_max_or_marker, WV_MENU_VTMM, "<Item>"),
     WAVE_GTKIFE("/View/<separator>", NULL, NULL, WV_MENU_SEP13, "<Separator>"),
-    WAVE_GTKIFE("/View/Constant Marker Update", "F11", menu_enable_constant_marker_update, WV_MENU_VCMU, "<ToggleItem>"),
+    WAVE_GTKIFE("/View/Constant Marker Update", NULL, menu_enable_constant_marker_update, WV_MENU_VCMU, "<ToggleItem>"),
     WAVE_GTKIFE("/View/<separator>", NULL, NULL, WV_MENU_SEP14, "<Separator>"),
     WAVE_GTKIFE("/View/Draw Roundcapped Vectors", "<Alt>F2", menu_use_roundcaps, WV_MENU_VDRV, "<ToggleItem>"),
       /* 120 */
@@ -7844,6 +7888,7 @@ void set_menu_toggles(void)
 GLOBALS->quiet_checkmenu = 1;
 
 gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(menu_wlist[WV_MENU_VZPS]), GLOBALS->zoom_pow10_snap);
+gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(menu_wlist[WV_MENU_FULLSCR]), GLOBALS->fullscreen);
 gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(menu_wlist[WV_MENU_VSG]), GLOBALS->display_grid);
 gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(menu_wlist[WV_MENU_SHW]), GLOBALS->highlight_wavewindow);
 gtk_check_menu_item_set_active(GTK_CHECK_MENU_ITEM(menu_wlist[WV_MENU_FILL1]), GLOBALS->fill_waveform);
