@@ -248,6 +248,8 @@ WV_MENU_MWSON,
 WV_MENU_MLKLT,
 WV_MENU_MLKRT,
 WV_MENU_MLKOFF,
+WV_MENU_FULLSCR,
+WV_MENU_SEP8C,
 WV_MENU_VSG,
 WV_MENU_SEP9,
 WV_MENU_SHW,
